--- a/estudos-curso-alura/styles/style.css
+++ b/estudos-curso-alura/styles/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .cabecalho {
-    padding: 2% 0 0 15%;
+    padding: 5% 0 0 15%;
 }
 
 .cabecalho__menu {
@@ -38,15 +38,15 @@ body {
 }
 
 .apresentacao {
-    padding: 8% 15% 8% 15%;
+    padding: 8% 12%;
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    gap: 20px;
+    gap: 5%;
 }
 
 .apresentacao__texto {
-    width: 615px;
+    width: 70%;
     display: flex;
     flex-direction: column;
     text-align: justify;
@@ -109,7 +109,7 @@ body {
     border: var(--cor-terciaria) 3px solid;
     border-radius: 12px;
     font-size: 1rem;
-    width: 280px;
+    width: 75%;
     padding: 10px 0;
     text-align: center;
     text-decoration: none;
@@ -130,4 +130,35 @@ body {
     font-family: var(--fonte-secundaria);
     display: flex;
     justify-content: center;
+}
+
+@media (max-width: 800px) {
+    .cabecalho {
+        padding: 5% 0 0 22%;
+    }
+    
+    .apresentacao {
+        padding: 8% 8%;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    .apresentacao__imagem {
+        max-width: 75%;
+        max-height: 75%;
+        padding-bottom: 10%;
+    }
+
+    .apresentacao__texto {
+        width: 90%;
+        text-align: start;
+    }
+
+    .apresentacao__texto__descricao {
+        text-align: inherit;
+    }
+
+    .apresentacao__texto__artigo {
+        text-align: inherit;
+    }
 }
