Criação da primeira seção

--- a/praticando-HTML-CSS/assets/styles/style.css
+++ b/praticando-HTML-CSS/assets/styles/style.css
@@ -14,3 +14,14 @@ body {
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
 }
+
+.principal {
+    background-image: url("../img/Background.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: right;
+}
+
+.container {
+    height: 100vh;
+}
